/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.carbondata.store.protocol";
option java_outer_classname = "MasterService";
option objc_class_prefix = "MST";

package protocol;

// The master service definition.
service Master {
    rpc RegisterWorker (RegisterWorkerRequest) returns (RegisterWorkerResponse) {}
}

// The request message from worker to driver to register worker
message RegisterWorkerRequest {
    string hostname = 1;
    int32 port = 2;
    int32 cores = 3;
}

// The response message from driver to worker for register acknowledgement
message RegisterWorkerResponse {
    string message = 1;
}
